feat: admin frontend pre init
